--- a/templates/platform.html
+++ b/templates/platform.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.98.0">
-  <title>Jumbotron example · Bootstrap v5.2</title>
+  <title>Learning Algorithm as a Service</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
 
@@ -104,7 +104,7 @@
               d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
               fill="currentColor"></path>
           </svg>
-          <span class="fs-4">A Platform </span>
+          <span class="fs-4">Learning Algorithm as a Service</span>
         </a>
       </header>
 
@@ -114,7 +114,7 @@
           <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
               <h1 class="display-5 fw-bold">Service</h1>
-              <p class="col-md-8 fs-4">Predict by deployed model.</p>
+              <p class="col-md-8 fs-4">Predict by deployed model</p>
               <button class="btn btn-primary btn-lg" type="button"
                 onclick="window.location.href='/pipeline/service';">Try it!</button>
             </div>
@@ -127,7 +127,7 @@
           <div class="p-5 mb-4 bg-dark rounded-3">
             <div class="container-fluid text-white bg-dark py-5">
               <h1 class="display-5 fw-bold">Deploy</h1>
-              <p class="col-md-8 fs-4">Deploy your model.</p>
+              <p class="col-md-8 fs-4">Deploy your trained model</p>
               <button class="btn btn-primary btn-lg" type="button"
                 onclick="window.location.href='/pipeline/deploy';">Try
                 it!</button>
@@ -140,7 +140,7 @@
         <div class="col-md-6">
           <div class="h-100 p-5 text-white bg-dark rounded-3">
             <h2>Data Pipeline</h2>
-            <p>Define your own data.</p>
+            <p>Prepare the data</p>
             <button class="btn btn-outline-light" type="button" onclick="window.location.href='/pipeline/data';">Try
               it!</button>
 
@@ -150,7 +150,7 @@
         <div class="col-md-6">
           <div class="h-100 p-5 bg-light border rounded-3">
             <h2>Model Pipeline</h2>
-            <p>Define your own model and train.</p>
+            <p>Customize your own model and learning algorithm</p>
             <button class="btn btn-outline-secondary" type="button"
               onclick="window.location.href='/pipeline/model';">Try it!</button>
           </div>
