--- a/templates/data.html
+++ b/templates/data.html
@@ -212,7 +212,7 @@
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
-              <label class="col-md-8 fs-4"><b>Supported Data format : CSV (Comma-Separated Values) E.g., </b></label>
+              <label class="col-md-8 fs-5"><b>Supported Data format : CSV (Comma-Separated Values) file e.g., </b></label>
 
               <div class="row align-items-md-stretch">
 
