--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -139,7 +139,15 @@
     <div class="p-5 mb-1 bg-light rounded-3">
       <div class="container-fluid py-0">
         <h1 class="display-6 fw-bold">Deploy</h1>
-        <p class="col-md-8 fs-5">Management of model deployment.</p>
+        <br><br>
+        <p class="col-md-12 fs-6">Model deployment is the process of putting machine learning 
+          models into production. This makes the model’s predictions available to users, 
+          developers or systems, so they can make business decisions based on data, interact
+          with their application (like recognize a face in an image) and so on.</p>
+
+        <br>
+
+        <label class="col-md-8 fs-4 fw-bold">Model management</label>
 
         <br><br>
 
