--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -151,7 +151,7 @@
                     physiological, genetic, mental, economic, cultural or social identity.
                   </p>
                   <div class="form-floating mb-3">
-                    <select class="form-control" id="select_data" placeholder="10" name="dataDirectory" method="GET"  style="font-size:20px;"> 
+                    <select class="form-select" id="select_data" placeholder="10" name="dataDirectory" method="GET"  style="font-size:15px;"> 
                       {% for dataDir in upload_data %}
                       <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
                       {% endfor %}
@@ -186,7 +186,7 @@
               </p>
 
               <div class="form-floating mb-3">
-                <select class="form-control" id="select_weightInitialization" placeholder="10" name="weightInitialization" method="GET"  style="font-size:20px;"> 
+                <select class="form-select" id="select_weightInitialization" placeholder="10" name="weightInitialization" method="GET"  style="font-size:15px;"> 
                   <option value= "xavierNormal" SELECTED>Xavier Normal</option>
                   <option value= "xavierUniform" >Xavier Uniform</option>
                   <option value= "kaimingNormal" >Kaiming Normal</option>
@@ -202,7 +202,7 @@
               </p>
 
               <div class="form-floating mb-3">
-                <select class="form-control" id="select_activationFunction" placeholder="10" name="activationFunction" method="GET"  style="font-size:20px;"> 
+                <select class="form-select" id="select_activationFunction" placeholder="10" name="activationFunction" method="GET"  style="font-size:15px;"> 
                   <option value= "ReLU" SELECTED>ReLU</option>
                 </select>
                 <label for="select_activationFunction">Activation function</label>
@@ -247,7 +247,7 @@
               </p>
 
               <div class="form-floating mb-3">
-                <select class="form-control" id="select_testingMetric" name="testingMetric" placeholder="10" name="lossFunction" method="GET"  style="font-size:20px;"> 
+                <select class="form-select" id="select_testingMetric" name="testingMetric" placeholder="10" name="lossFunction" method="GET"  style="font-size:15px;"> 
                   <option value= "RMSE" SELECTED>RMSE</option>
                 </select>
                 <label for="select_testingMetric">Testing metric</label>
@@ -277,7 +277,7 @@
               </p>
 
               <div class="form-floating mb-3">
-                <select class="form-control" id="select_loss" placeholder="10" name="lossFunction" method="GET"  style="font-size:20px;" onclick="showLossFunctionEquation()"> 
+                <select class="form-select" id="select_loss" placeholder="10" name="lossFunction" method="GET"  style="font-size:15px;" onclick="showLossFunctionEquation()"> 
                   <option value= "RMSE" SELECTED>RMSE</option>
                   <option value= "MSE" >MSE</option>
                   <option value= "CROSSENTROPYLOSS" >CROSSENTROPYLOSS</option>
@@ -299,7 +299,7 @@
               </p>
 
               <div class="form-floating mb-3">
-                <select class="form-control" id="select_optim" placeholder="10" name="optimizer" method="GET"  style="font-size:20px;" onclick="showOptimizerParameters()"> 
+                <select class="form-select" id="select_optim" placeholder="10" name="optimizer" method="GET"  style="font-size:15px;" onclick="showOptimizerParameters()"> 
                   <option value= "Adam" SELECTED>Adam</option>
                   <option value= "AdamW" >AdamW</option>
                 </select>
