--- a/templates/platform.html
+++ b/templates/platform.html
@@ -114,7 +114,7 @@
           <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
               <h1 class="display-5 fw-bold">Service</h1>
-              <p class="col-md-8 fs-4">Predict by deployed model</p>
+              <p class="col-md-8 fs-4">Leverage deployed models</p>
               <button class="btn btn-primary btn-lg" type="button"
                 onclick="window.location.href='/pipeline/service';">Try it!</button>
             </div>
@@ -127,7 +127,7 @@
           <div class="p-5 mb-4 bg-dark rounded-3">
             <div class="container-fluid text-white bg-dark py-5">
               <h1 class="display-5 fw-bold">Deploy</h1>
-              <p class="col-md-8 fs-4">Deploy your trained model</p>
+              <p class="col-md-8 fs-4">Deploy trained models</p>
               <button class="btn btn-primary btn-lg" type="button"
                 onclick="window.location.href='/pipeline/deploy';">Try
                 it!</button>
