--- a/templates/data.html
+++ b/templates/data.html
@@ -172,13 +172,13 @@
                     <p class="col-md-12 fs-6">3. The independent variable(X) is the cause. Its 
                       value is independent of other variables in your study.
                     </p>
-                    <label for="data_x" class="btn btn-outline-primary btn-lg">Select csv file for independent variable(X) with header</label>
+                    <label for="data_x" class="btn btn-outline-primary btn-lg">Select csv file  with header for independent variable(X)</label>
                     <input type="file" id="data_x" name="file_x" hidden>
                     <br><br>
                     <p class="col-md-12 fs-6">4. The dependent variable(Y) is the effect. Its 
                       value depends on changes in the independent variable(X).
                     </p>
-                    <label for="data_y" class="btn btn-outline-primary btn-lg">Select csv file for dependent variable(Y) with header</label>
+                    <label for="data_y" class="btn btn-outline-primary btn-lg">Select csv file  with header for dependent variable(Y)</label>
                     <input type="file" id="data_y" name="file_y" hidden>
                     <br>
                   </div>
@@ -197,7 +197,7 @@
 
             <div class="col-md-12">
               <div class="h-100 p-5 bg-light border rounded-3">
-                <text>Independent variable(X) x csv file : <font color="blue"><b>{{filename_x}}</b></font></text>
+                <text>Independent variable(X) csv file : <font color="blue"><b>{{filename_x}}</b></font></text>
                 <br>
                 <text>Dependent variable(Y) csv file : <font color="blue"><b>{{filename_y}}</b></font></text>
                 <br>
