在每個頁面新增導向按鈕

--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -665,7 +665,10 @@
         </div>
 
         </form>
-
+        
+        <label class="col-md-8 fs-5"></label>
+        <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/deploy';">Deploy Pipeline</label>
+        
       </div>
     </div>
 
