--- a/templates/service.html
+++ b/templates/service.html
@@ -152,7 +152,8 @@
                   so that it is suitable for further processing and analysis.
                 </p>
 
-                <p class="col-md-12 fs-6">1. Prepare your testing data here -> <a href="/pipeline/data"> Data Pipeline</a>
+                <p class="col-md-12 fs-6">1. Prepare your testing data here ->         
+                  <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/data';">Data Pipeline</label>
                 </p>
 
                 <p class="col-md-12 fs-6">2. Select an API to get prediction.
