--- a/templates/data.html
+++ b/templates/data.html
@@ -209,6 +209,12 @@
 
           <br>
 
+          <label class="col-md-8 fs-3"></label>
+          <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/model';">Model Pipeline</label>
+          <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/service';">Service Pipeline</label>
+
+          <br><br>
+
           <div class="col-md-12">
             <div class="h-100 p-5 bg-light border rounded-3">
 
