--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -231,6 +231,9 @@
 
         </form>
 
+        <label class="col-md-8 fs-5"></label>
+        <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/service';">Service Pipeline</label>
+
       </div>
     </div>
 
