--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -453,6 +453,9 @@
           <text>After training completed, this model & metadata would save automatically</text>
         </form>
 
+        <label class="col-md-8 fs-5"></label>
+        <label class="btn btn-outline-primary btn-lg" onclick="window.location.href='/pipeline/deploy';">Deploy Pipeline</label>
+
       </div>
     </div>
 
