新增 entry 頁面及 AI Developer Service & AI Software Service

--- a/templates/model.html
+++ b/templates/model.html
@@ -90,9 +90,9 @@
   <div class="container py-4">
     <header class="pb-3 mb-4 border-bottom">
       <div class="row align-items-md-stretch">
-        <div class="col-md-6">
+        <div class="col-md-12">
 
-          <a href="/pipeline/platform" class="d-flex align-items-center text-dark text-decoration-none">
+          <a href="/entry" class="d-flex align-items-center text-dark text-decoration-none">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
               <title>Bootstrap</title>
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -103,11 +103,11 @@
           </a>
         </div>
       
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <a href="https://www.google.com/" class="d-flex align-items-center text-dark text-decoration-none">
             <span class="fs-4">Advanced mode</span>
           </a>
-        </div>
+        </div> -->
     </header>
 
     <div class="p-5 mb-4 bg-light rounded-3">
