--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -128,7 +128,7 @@
   <main>
     <div class="container py-4">
       <header class="pb-3 mb-4 border-bottom">
-        <a href='/pipeline/platform' class="d-flex align-items-center text-dark text-decoration-none">
+        <a href='/entry' class="d-flex align-items-center text-dark text-decoration-none">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
             <title>Bootstrap</title>
             <path fill-rule="evenodd" clip-rule="evenodd"
