--- a/templates/model_scenario_SLFN.html
+++ b/templates/model_scenario_SLFN.html
@@ -387,14 +387,14 @@
 
                 <div class="gallery">
                   <a target="_blank" href="{{url_path_for_validatingAccuracy}}">
-                    <img src= "{{url_path_for_validatingAccuracy}}"  alt="Training Accuracy" width="600" height="400">
+                    <img src= "{{url_path_for_validatingAccuracy}}"  alt="Validating Accuracy" width="600" height="400">
                   </a>
                   <div class="desc">Validating Accuracy</div>
                 </div>
                 
                 <div class="gallery">
                   <a target="_blank" href="{{url_path_for_validatingLoss}}">
-                    <img src= "{{url_path_for_validatingLoss}}"  alt="Training Loss" width="600" height="400">
+                    <img src= "{{url_path_for_validatingLoss}}"  alt="Validating Loss" width="600" height="400">
                   </a>
                   <div class="desc">Validating Loss</div>
                 </div>
