--- a/templates/service.html
+++ b/templates/service.html
@@ -184,7 +184,7 @@
               <div class="h-100 p-5 bg-light border rounded-3">
                 <label class="col-md-8 fs-4 fw-bold">Model Performance</label>
                 <br><br>
-                <text><b>RMSE(Root Mean Squared Error) : <font color="blue">{{rmseError}}</font></b></text>
+                <text><b>RMSE(Root Mean Squared Error) : <font color="red">{{rmseError}}</font></b></text>
                 <br>
                 <text><b>Training accuracy : <font color="blue">{{trainingAccuracy}}</font></b></text>
                 <br>
