新增 External，暫用於表示外部 modules

--- a/templates/model_scenario_ASLFN.html
+++ b/templates/model_scenario_ASLFN.html
@@ -380,6 +380,7 @@
                     <option value="EU">EU</option>
                     <option value="EU_LG">EU_LG</option>
                     <option value="EU_LG_UA">EU_LG_UA</option>
+                    <option value="External">External</option>
                     <option value="Disabled" SELECTED>Disabled</option>
                   </select>
                   <label for="select_matchingRule">Matching rule</label>
@@ -514,6 +515,7 @@
                         <option value="ri_mbo">ri_mbo</option>
                         <option value="bi_sbo">bi_sbo</option>
                         <option value="bi_mbo">bi_mbo</option>
+                        <option value="External">External</option>
                         <option value="Disabled" SELECTED>Disabled</option>
                       </select>
                       <label for="select_crammingRule">Cramming rule</label>
@@ -563,6 +565,7 @@
                         <option value="ri_mbo">ri_mbo</option>
                         <option value="bi_sbo">bi_sbo</option>
                         <option value="bi_mbo">bi_mbo</option>
+                        <option value="External">External</option>
                         <option value="Disabled" SELECTED>Disabled</option>
                       </select>
                       <label for="select_reorganizingRule">Reorganizing rule</label>
